fixed image visibility

--- a/src/components/WorkComponents/style.css
+++ b/src/components/WorkComponents/style.css
@@ -160,7 +160,7 @@
 @media screen and (max-width: 1030px) {
   .imgContainer::before {
     border: 1px solid black;
-    opacity: 0.87;
+    opacity: 0.86;
   }
 }
 @media screen and (max-width: 1000px) {
